--- a/SiteFofoca/contato.html
+++ b/SiteFofoca/contato.html
@@ -73,7 +73,7 @@
             <a href="https://soulcode.com/" target="_blank"><img src="imagem/SoulCode.png" alt="soulcode"></a>
             <br>
         </section>
-        <p>&copy; 2023 - Soulcode Academy</p>
+        <p id="footer_copyright">&copy; 2023 - Soulcode Academy</p>
     </footer>
     <script src="main.js"></script>
 </body>
