--- a/SiteFofoca/fofocasDestaque/fofoc7.html
+++ b/SiteFofoca/fofocasDestaque/fofoc7.html
@@ -65,7 +65,7 @@
             <a href="https://soulcode.com/" target="_blank"><img src="../imagem/SoulCode.png" alt="soulcode"></a>
             <br>
         </section>
-        <p>&copy; 2023 - Soulcode Academy</p>
+        <p id="footer_copyright">&copy; 2023 - Soulcode Academy</p>
     </footer>
 </body>
 
