--- a/SiteFofoca/contato.html
+++ b/SiteFofoca/contato.html
@@ -42,7 +42,7 @@
                     <option value="colaboração">Colaboração</option>
                     <option value="dúvida">Dúvida</option>
                 </select>
-                <label for="texto">Mensasgem</label>
+                <label for="texto">Mensagem</label>
                 <input type="text" id="mensagem=" name "mensagem" required placeholder=" Digite aqui sua mensagem">
                 <button type="submit" class="button">Enviar</button>
             </form>
