pagina de noticias pronta

--- a/SiteFofoca/noticias.html
+++ b/SiteFofoca/noticias.html
@@ -29,87 +29,75 @@
         <section class="fofocas">
             <!--Aqui dentro vai as fofocas-->
             <div class="fofoca">
-                <img src="imagem/BBB.jpg" alt="" class="imagemFofoca">
+                <img src="img-noticias/preta.jpg" alt="" class="imagemFofoca">
                 <div class="textoFofoca">
-                    <h2>Título Texto</h2>
+                    <h2>Preta Gil: casamento chega ao fim, afirma colunista</h2>
                     <div id="fofoca1"></div><!--ATENÇÂO ESSA DIV SÓ TEM O OBJETIVO E ANCORAR-->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nulla ipsam earum, eligendi,
-                        veritatis qui nam facere architecto ea assumenda labore odit explicabo aliquam deleniti
-                        officiis. Adipisci expedita minus mollitia!</p>
+                    <p>O colunista Tiago Sodré afirma que o casamento de sete anos de Preta Gil e Rodrigo Godoy chegou ao fim.  O casal já enfrentava uma crise há 
+                        algum tempo, mas a separação acontece em um momento delicado...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc1.html">Leia mais</a><!--Link para ir matéria completa-->
+                    <a href="fofocasDestaque/fofoc1.html" class="leiaMais">Leia mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
             <div class="fofoca">
-                <img src="imagem/BBB.jpg" alt="" class="imagemFofoca">
+                <img src="img-noticias/tiago.jpg" alt="" class="imagemFofoca">
                 <div class="textoFofoca">
-                    <h2>Título Texto</h2>
+                    <h2>Tiago Abravanel beija muito no show de Wanessa</h2>
                     <div id="fofoca2"></div><!--ATENÇÂO ESSA DIV SÓ TEM O OBJETIVO E ANCORAR-->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nulla ipsam earum, eligendi,
-                        veritatis qui nam facere architecto ea assumenda labore odit explicabo aliquam deleniti
-                        officiis. Adipisci expedita minus mollitia!</p>
+                    <p>Acompanhado pelo marido, Fernando Poli com quem oficializou a união no ano passado, Tiago Abravanel era só amor na noite de sábado, 15 de abril. O casal estava na área do show de Wanessa... </p>
                     <br>
-                    <a href="fofocasDestaque/fofoc2.html">Leia mais</a><!--Link para ir matéria completa-->
+                    <a href="fofocasDestaque/fofoc2.html" class="leiaMais">Leia mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
             <div class="fofoca">
-                <img src="imagem/BBB.jpg" alt="" class="imagemFofoca">
+                <img src="img-noticias/cristiano.jpeg" alt="" class="imagemFofoca">
                 <div class="textoFofoca">
-                    <h2>Título Texto</h2>
+                    <h2>De piscina a campo de futebol: conheça a mansão de CR7</h2>
                     <div id="fofoca3"></div><!--ATENÇÂO ESSA DIV SÓ TEM O OBJETIVO E ANCORAR-->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nulla ipsam earum, eligendi,
-                        veritatis qui nam facere architecto ea assumenda labore odit explicabo aliquam deleniti
-                        officiis. Adipisci expedita minus mollitia!</p>
+                    <p>Cristiano Ronaldo decidiu colocar a mansão de Madri para alugar. O imóvel é avaliado em 5 milhões de euros R$ 27 milhões e foi recém-reformado pela companheira do craque, Georgina ...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc3.html">Leia mais</a><!--Link para ir matéria completa-->
+                    <a href="fofocasDestaque/fofoc3.html" class="leiaMais">Leia mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
             <div class="fofoca">
-                <img src="imagem/BBB.jpg" alt="" class="imagemFofoca">
+                <img src="img-noticias/pique.jpeg" alt="" class="imagemFofoca">
                 <div class="textoFofoca">
-                    <h2>Título Texto</h2>
+                    <h2>Namorada de Piqué teria traído ex-jogador com Guardiola</h2>
                     <div id="fofoca4"></div><!--ATENÇÂO ESSA DIV SÓ TEM O OBJETIVO E ANCORAR-->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nulla ipsam earum, eligendi,
-                        veritatis qui nam facere architecto ea assumenda labore odit explicabo aliquam deleniti
-                        officiis. Adipisci expedita minus mollitia!</p>
+                    <p>Nada como um dia após o outro. Segundo o jornal Sport, da Espanha, a namorada de Piqué, a modelo Clara Chía, teria traído o ex-jogador com ninguém menos que o treinador Pep Guardiola... </p>
                     <br>
-                    <a href="fofocasDestaque/fofoc4.html">Leia mais</a><!--Link para ir matéria completa-->
+                    <a href="fofocasDestaque/fofoc4.html" class="leiaMais">Leia mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
             <div class="fofoca">
-                <img src="imagem/BBB.jpg" alt="" class="imagemFofoca">
+                <img src="img-noticias/anita_preta.jpg" alt="" class="imagemFofoca">
                 <div class="textoFofoca">
-                    <h2>Título Texto</h2>
+                    <h2>3 amizades de famosos que chegaram ao fim</h2>
                     <div id="fofoca5"></div><!--ATENÇÂO ESSA DIV SÓ TEM O OBJETIVO E ANCORAR-->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nulla ipsam earum, eligendi,
-                        veritatis qui nam facere architecto ea assumenda labore odit explicabo aliquam deleniti
-                        officiis. Adipisci expedita minus mollitia!</p>
+                    <p>Lista reúne relações rompidas de Anitta, Xuxa e outros...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc5.html">Leia mais</a><!--Link para ir matéria completa-->
+                    <a href="fofocasDestaque/fofoc5.html" class="leiaMais">Leia mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
             <div class="fofoca">
-                <img src="imagem/BBB.jpg" alt="" class="imagemFofoca">
+                <img src="img-noticias/padre.jpg" alt="" class="imagemFofoca">
                 <div class="textoFofoca">
-                    <h2>Título Texto</h2>
+                    <h2>Acusado de gordofobia, padre Fábio de Melo apaga vídeo e se pronuncia</h2>
                     <div id="fofoca6"></div><!--ATENÇÂO ESSA DIV SÓ TEM O OBJETIVO E ANCORAR-->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nulla ipsam earum, eligendi,
-                        veritatis qui nam facere architecto ea assumenda labore odit explicabo aliquam deleniti
-                        officiis. Adipisci expedita minus mollitia!</p>
+                    <p>O padre Fábio de Melo se retratou nesta sexta-feira, 14, após ser acusado de gordofobia por compartilhar...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc6.html">Leia mais</a><!--Link para ir matéria completa-->
+                    <a href="fofocasDestaque/fofoc6.html" class="leiaMais">Leia mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
             <div class="fofoca">
-                <img src="imagem/BBB.jpg" alt="" class="imagemFofoca">
+                <img src="img-noticias/hailey-bieber.jpg" alt="" class="imagemFofoca">
                 <div class="textoFofoca">
-                    <h2>Título Texto</h2>
+                    <h2>Esses são perfumes que as celebridades amam e usam DE VERDADE e não ganham um centavo por isso</h2>
                     <div id="fofoca7"></div><!--ATENÇÂO ESSA DIV SÓ TEM O OBJETIVO E ANCORAR-->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nulla ipsam earum, eligendi,
-                        veritatis qui nam facere architecto ea assumenda labore odit explicabo aliquam deleniti
-                        officiis. Adipisci expedita minus mollitia!</p>
+                    <p><b>Bieber prefere perfume amadeirado.</b> 
+                        Considerada uma das fashionistas mais influentes na atualidade, Hailey Bieber tem um perfume com notas...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc7.html">Leia mais</a><!--Link para ir matéria completa-->
+                    <a href="fofocasDestaque/fofoc7.html" class="leiaMais">Leia mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
         </section>
