--- a/SiteFofoca/fofocasDestaque/fofoc2.html
+++ b/SiteFofoca/fofocasDestaque/fofoc2.html
@@ -28,15 +28,19 @@
     <section class="area-fofocas">
         <section class="fofocas"><!--Talvez precise criar uma class para trabalhar aqui-->
             <!--Aqui vai o formulário do contato-->
-           <h1>Fofoquinha da Vez: Título aqui</h1>
-           <img src="../imagem/BBB.jpg" alt="" class="img-fofocas">
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ab tempore laudantium possimus facere aperiam tempora sequi a natus, obcaecati sint, nam placeat maxime praesentium. Quos ullam soluta numquam magni!</p>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ab tempore laudantium possimus facere aperiam tempora sequi a natus, obcaecati sint, nam placeat maxime praesentium. Quos ullam soluta numquam magni!</p>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ab tempore laudantium possimus facere aperiam tempora sequi a natus, obcaecati sint, nam placeat maxime praesentium. Quos ullam soluta numquam magni!</p>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ab tempore laudantium possimus facere aperiam tempora sequi a natus, obcaecati sint, nam placeat maxime praesentium. Quos ullam soluta numquam magni!</p> 
-           <div id="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fAG1iTQl-Cw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
+           
+            <h1>Tiago Abravanel beija muito no show de Wanessa</h1>
+            <h3>Fernando Poli e Tiago Abravanel curtiram o show de Wanessa</h3>
+            <img src="../img-noticias/tiago.jpg" alt="" class="img-fofocas">
+            
+            <p>Acompanhado pelo marido, Fernando Poli com quem oficializou a união no ano passado, Tiago Abravanel era só amor na noite de sábado, 15 de abril. O casal estava na área do show de Wanessa, realizado na Áudio, em São Paulo. </p><br/>
+            <p>O casal, que está junto há nove anos, contou ainda com a companhia de Jessilane e a namorada, Sté Fricks. A bióloga e o neto de Silvio Santos se tornaram grades amigos desde que se conheceram no “Big Brother Brasil 22” e estão sempre juntos.</p><br/>
+            <p>Durante o show, enquanto Wanessa fazia sua performance no palco ao som de seus hits, levando os fãs à loucura, Tiago e Fernando protagonizavam beijos ardentes na área vip, o que depois repetiram no camarim, mostrando que o amor entre eles está em alta e é pra valer.</p> <br/>
+ 
+            <div id="video">
+             <h3>Confira o vídeo em que Tiago Abravanel conta tudo sobre o BBB.</h3>
+                 <iframe width="560" height="315" src="https://www.youtube.com/embed/YaXNmA5Z19w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+             </div>
         </section>
         <aside class="menu-lateral">
             <!--Menu com links de ancoragem-->
