--- a/SiteFofoca/fofocasDestaque/fofoc7.html
+++ b/SiteFofoca/fofocasDestaque/fofoc7.html
@@ -28,15 +28,22 @@
     <section class="area-fofocas">
         <section class="fofocas"><!--Talvez precise criar uma class para trabalhar aqui-->
             <!--Aqui vai o formulário do contato-->
-           <h1>Fofoquinha da Vez: Título aqui</h1>
-           <img src="../imagem/BBB.jpg" alt="" class="img-fofocas">
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ab tempore laudantium possimus facere aperiam tempora sequi a natus, obcaecati sint, nam placeat maxime praesentium. Quos ullam soluta numquam magni!</p>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ab tempore laudantium possimus facere aperiam tempora sequi a natus, obcaecati sint, nam placeat maxime praesentium. Quos ullam soluta numquam magni!</p>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ab tempore laudantium possimus facere aperiam tempora sequi a natus, obcaecati sint, nam placeat maxime praesentium. Quos ullam soluta numquam magni!</p>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ab tempore laudantium possimus facere aperiam tempora sequi a natus, obcaecati sint, nam placeat maxime praesentium. Quos ullam soluta numquam magni!</p> 
-           <div id="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fAG1iTQl-Cw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
+            <h1>Esses são perfumes que as celebridades amam e usam DE VERDADE e não ganham um centavo por isso</h1>
+            <h3>A escolha do perfume é algo marcante no dia a dia de qualquer pessoa e com os famosos não seria diferente: veja a seguir quais são os queridinhos de celebridades internacionais!</h3>
+            <img src="../img-noticias/hailey-bieber.jpg" alt="hailey bieber" class="img-fofocas">           
+            <p><b>Bieber prefere perfume amadeirado.</b> 
+             Considerada uma das fashionistas mais influentes na atualidade, Hailey Bieber tem um perfume com notas amadeiradas com seu favorito. O escolhido é o West Side, da Bond No. 9, segundo entrevista da modelo à revista Elle Austrália.</p><br/><br/><br/><br/>
+            
+ 
+             <img src="../img-noticias/rhiana.jpg" alt="hailey bieber" class="img-fofocas">           
+            <p><b>Rihanna</b> 
+             é outra fashion icon que já teve revelado seu perfume favorito: trata-se do Love, Don't Be Shy by Kilian. Ele é um perfume doce, com notas de neroli e marshmallow
+ 
+             
+            <div id="video">
+             <h3>Veja o vídeo que mostra os perfumes das celebridades.</h3>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/RzO80UmJ6oU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+             </div>
         </section>
         <aside class="menu-lateral">
             <!--Menu com links de ancoragem-->
