--- a/SiteFofoca/fofocasDestaque/fofoc1.html
+++ b/SiteFofoca/fofocasDestaque/fofoc1.html
@@ -28,20 +28,29 @@
     <section class="area-fofocas">
         <section class="fofocas"><!--Talvez precise criar uma class para trabalhar aqui-->
             <!--Aqui vai o formulário do contato-->
-           
-           <h1>Preta Gil: casamento chega ao fim, afirma colunista</h1>
-           <h3>  Mesmo separados, Rodrigo continua prestando apoio e cuidado à filha de Gilberto Gil nesse período delicado de saúde</h3>
-           <img src="../img-noticias/preta.jpg" alt="" class="img-fofocas">
-           <p>O colunista Tiago Sodré afirma que o casamento de sete anos de Preta Gil e Rodrigo Godoy chegou ao fim.  O casal já enfrentava uma crise há 
-            algum tempo, mas a separação acontece em um momento delicado para Preta, já que a cantora enfrenta um câncer e está em tratamento intenso.</p>
 
-           <p>Por conta das internações para melhor acompanhamento da doença, Preta está afastada dos palcos e menos assídua às redes sociais. </p>
-           <p>Apesar da separação, Rodrigo ainda presta solidariedade à Preta e, inclusive, a acompanha em sessões de quimioterapia</p>
-           <p>Os fãs já desconfiavam da situação, pois as postagens do casal junto não aconteciam desde o início do ano.</p> 
-           
-           <div id="video">
-            <h3>Veja o vídeo que explica a separação do casal.</h3>
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/sbMbliYo-ok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h1>Preta Gil: casamento chega ao fim, afirma colunista</h1>
+            <h3> Mesmo separados, Rodrigo continua prestando apoio e cuidado à filha de Gilberto Gil nesse período
+                delicado de saúde</h3>
+            <img src="../img-noticias/preta.jpg" alt="" class="img-fofocas">
+            <p>O colunista Tiago Sodré afirma que o casamento de sete anos de Preta Gil e Rodrigo Godoy chegou ao fim. O
+                casal já enfrentava uma crise há
+                algum tempo, mas a separação acontece em um momento delicado para Preta, já que a cantora enfrenta um
+                câncer e está em tratamento intenso.</p>
+
+            <p>Por conta das internações para melhor acompanhamento da doença, Preta está afastada dos palcos e menos
+                assídua às redes sociais. </p>
+            <p>Apesar da separação, Rodrigo ainda presta solidariedade à Preta e, inclusive, a acompanha em sessões de
+                quimioterapia</p>
+            <p>Os fãs já desconfiavam da situação, pois as postagens do casal junto não aconteciam desde o início do
+                ano.</p>
+
+            <div id="video">
+                <h3>Veja o vídeo que explica a separação do casal.</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sbMbliYo-ok"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </section>
         <aside class="menu-lateral">
@@ -66,8 +75,8 @@
             <br>
             <a href="https://www.instagram.com/soulcodeacademy/" target="_blank"><img src="../imagem/insta.png"
                     alt="instagram"></a>
-            <a href="https://www.linkedin.com/company/soulcodeacademy/" target="_blank"><img src="../imagem/linkedin.png"
-                    alt="linkedin"></a>
+            <a href="https://www.linkedin.com/company/soulcodeacademy/" target="_blank"><img
+                    src="../imagem/linkedin.png" alt="linkedin"></a>
             <a href="https://soulcode.com/" target="_blank"><img src="../imagem/SoulCode.png" alt="soulcode"></a>
             <br>
         </section>
