--- a/SiteFofoca/formulario.html
+++ b/SiteFofoca/formulario.html
@@ -20,6 +20,7 @@
                     <a href="index.html"><b>Home</b></a>
                     <a href="noticias.html"> <b>Notícias</b></a>
                     <a href="contato.html"><b>Contatos</b></a>
+                    <a href="formulario.html"><b>Seja um Fofocoders</b></a>
                 </li>
             </ul>
         </nav><!--Fim de Menus para outras pages-->
