--- a/SiteFofoca/contato.html
+++ b/SiteFofoca/contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
         <section class="fofocas"><!--Talvez precise criar uma class para trabalhar aqui-->
             <!--Aqui vai o formulário do contato-->
             <form action="/submit" method="post" onsubmit="return validarNome();" class="formulario">
-                <h2>Seja Parceiro Fofocoders ou Simplesmente nos dê a sua opnião</h2><br />
+                <h2>Seja Parceiro Fofocoders ou Simplesmente nos dê a sua opinião</h2><br />
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required placeholder=" Digite seu primeiro nome">
                 <label for="email">Email:</label>
@@ -59,7 +59,7 @@
             </nav>
             <!--Fim menu lateral-->
             <div class="banner"><!--imagem de propaganda-->
-                <img src="imagem/Jessica-Alba-Honor-Taller-Family-Rare-Spl-ftr.webp" alt="">
+                <a href="https://www.adobe.com"><img src="imagem/banner.jpg" alt=""></a>
             </div>
         </aside>
     </section>
