--- a/SiteFofoca/fofocasDestaque/fofoc7.html
+++ b/SiteFofoca/fofocasDestaque/fofoc7.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -65,7 +65,7 @@
             </nav>
             <!--Fim menu lateral-->
             <div class="banner"><!--imagem de propaganda-->
-                <img src="../imagem/Jessica-Alba-Honor-Taller-Family-Rare-Spl-ftr.webp" alt="">
+                <a href="https://www.adobe.com"><img src="../imagem/banner.jpg" alt=""></a>
             </div>
         </aside>
     </section>
