--- a/SiteFofoca/index.html
+++ b/SiteFofoca/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 <body>
   <header class="menu">
     <!--Logo Fofocoders-->
-    <h1 class="logo" href="index.html">Fofo<i>Coders</i></h1>
+    <h1 class="logo" href="index.html">Fofo<i>Coders</i></h1><div id="homeAncora"></div>
     <nav><!--Começo de Menu Para outras pages-->
       <ul>
         <li>
@@ -37,10 +37,52 @@
           <img src="img-noticias/rhiana.jpg" alt="" srcset="" class="item current-item">
           <img src="img-noticias/anita_preta.jpg" alt="" srcset="" class="item">
           <img src="img-noticias/padre.jpg" alt="" srcset="" class="item">
+          <img src="img-noticias/hailey-bieber.jpg" alt="" srcset="" class="item">     
         </div>
       </div>
     </section><!--Fim carrosel-->
   </main>
+  <section class="area-fofocas">
+    <section class="fofocas"><!--Talvez precise criar uma class para trabalhar aqui-->
+      <h1>Últimas Fofocas</h1>
+      <section class="news">
+        <div class="card-container">
+          <div class="card">
+            <img src="img-noticias/padre.jpg" alt="Card image">
+            <div class="card-content">
+              <h2 class="card-title">Acusado de gordofobia</h2>
+              <p class="card-text">O padre Fábio de Melo se retratou nesta sexta-feira, 14, após ser acusado de gordofobia por
+                compartilhar...</p>
+              <a href="fofocasDestaque/fofoc6.html" class="card-button">Leia mais</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img src="img-noticias/preta.jpg" alt="Card image">
+            <div class="card-content">
+              <h2 class="card-title">Preta Gil: casamento chega ao fim, afirma colunista</h2>
+              <p class="card-text">O colunista Tiago Sodré afirma que o casamento de sete anos de Preta Gil e Rodrigo Godoy chegou
+                ao fim. O casal já enfrentava uma crise...</p>
+              <a href="fofocasDestaque/fofoc1.html" class="card-button">Leia mais</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+    <aside class="menu-lateral"><!--Começo de menu lateral-->
+      <!--Menu com links de ancoragem-->
+      <nav class="btn-lateral">
+        <ul>
+          <li><a href="#homeAncora">Voltar Para Home</a></li>
+          <li><a href="#redes">Conheça nossas Redes</a></li>
+        </ul>
+      </nav>
+      <!--Fim menu lateral-->
+      <div class="banner"><!--imagem de propaganda-->
+        <a href="https://www.adobe.com"><img src="imagem/banner.jpg" alt=""></a>
+      </div>
+    </aside>
+  </section>
   <!--Começo footer-->
   <footer>
     <section class="footer">
