--- a/SiteFofoca/noticias.html
+++ b/SiteFofoca/noticias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -38,7 +38,7 @@
                         ao fim. O casal já enfrentava uma crise há
                         algum tempo, mas a separação acontece em um momento delicado...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc1.html" class="leiaMais">Leia
+                    <a href="fofocasDestaque/fofoc1.html" class="card-button">Leia
                         mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
@@ -51,7 +51,7 @@
                         Abravanel era só amor na noite de sábado, 15 de abril. O casal estava na área do show de
                         Wanessa... </p>
                     <br>
-                    <a href="fofocasDestaque/fofoc2.html" class="leiaMais">Leia
+                    <a href="fofocasDestaque/fofoc2.html" class="card-button">Leia
                         mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
@@ -63,7 +63,7 @@
                     <p>Cristiano Ronaldo decidiu colocar a mansão de Madri para alugar. O imóvel é avaliado em 5 milhões
                         de euros R$ 27 milhões e foi recém-reformado pela companheira do craque, Georgina ...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc3.html" class="leiaMais">Leia
+                    <a href="fofocasDestaque/fofoc3.html" class="card-button">Leia
                         mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <p>Nada como um dia após o outro. Segundo o jornal Sport, da Espanha, a namorada de Piqué, a modelo
                         Clara Chía, teria traído o ex-jogador com ninguém menos que o treinador Pep Guardiola... </p>
                     <br>
-                    <a href="fofocasDestaque/fofoc4.html" class="leiaMais">Leia
+                    <a href="fofocasDestaque/fofoc4.html" class="card-button">Leia
                         mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
@@ -86,7 +86,7 @@
                     <div id="fofoca5"></div><!--ATENÇÂO ESSA DIV SÓ TEM O OBJETIVO E ANCORAR-->
                     <p>Lista reúne relações rompidas de Anitta, Xuxa e outros...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc5.html" class="leiaMais">Leia
+                    <a href="fofocasDestaque/fofoc5.html" class="card-button">Leia
                         mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     <p>O padre Fábio de Melo se retratou nesta sexta-feira, 14, após ser acusado de gordofobia por
                         compartilhar...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc6.html" class="leiaMais">Leia
+                    <a href="fofocasDestaque/fofoc6.html" class="card-button">Leia
                         mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
@@ -112,7 +112,7 @@
                         Considerada uma das fashionistas mais influentes na atualidade, Hailey Bieber tem um perfume com
                         notas...</p>
                     <br>
-                    <a href="fofocasDestaque/fofoc7.html" class="leiaMais">Leia
+                    <a href="fofocasDestaque/fofoc7.html" class="card-button">Leia
                         mais</a><!--Link para ir matéria completa-->
                 </div>
             </div>
@@ -133,7 +133,7 @@
             </nav>
             <!--Fim menu lateral-->
             <div class="banner"><!--imagem de propaganda-->
-                <img src="imagem/Jessica-Alba-Honor-Taller-Family-Rare-Spl-ftr.webp" alt="">
+                <a href="https://www.adobe.com"><img src="imagem/banner.jpg" alt=""></a>
             </div>
         </aside>
     </section>
