--- a/SiteFofoca/contato.html
+++ b/SiteFofoca/contato.html
@@ -30,7 +30,7 @@
         <section class="fofocas"><!--Talvez precise criar uma class para trabalhar aqui-->
             <!--Aqui vai o formulário do contato-->
             <form action="/submit" method="post" onsubmit="return validarNome();" class="formulario">
-                <h2>Seja Parceiro Fofocoders ou Simplesmente nos dê a sua opinião</h2><br />
+                <h2>Seja parceiro Fofocoders ou simplesmente nos dê a sua opinião</h2><br />
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required placeholder=" Digite seu primeiro nome">
                 <label for="email">Email:</label>
