target blanck propaganda

--- a/SiteFofoca/index.html
+++ b/SiteFofoca/index.html
@@ -79,7 +79,7 @@
       </nav>
       <!--Fim menu lateral-->
       <div class="banner"><!--imagem de propaganda-->
-        <a href="https://www.adobe.com"><img src="imagem/banner.jpg" alt=""></a>
+        <a href="https://www.adobe.com" target="_blank"><img src="imagem/banner.jpg" alt=""></a>
       </div>
     </aside>
   </section>
